@@ -4,6 +4,7 @@ Revision history for Lufi
 	- Use Mojo::SQLite instead of ORLite
 	- Use FiatTux plugins
 	- Option to force "Burn after reading" for each uploaded file
+	- Use GzipStatic and StaticCache plugins for speed
 
 0.02.2 2017-09-18
 	- Fix cron tasks bug
